package math;

/**
 * a class with needed constants
 */
public class Constants {
	public static double infinity = 1E38;
	public static double nearzero = 1E-10;
	public static double inv_pi = 1.0/Math.PI;
	public static double two_pi = 2.0*Math.PI;
	public static double inv_2pi = 0.5/Math.PI;
	public static double pi_over_two = 0.5*Math.PI;
	public static double one_over_three = 1.0/3.0;
	
}
